[ACA-2363] fix issue with text being visible underneath the info drawer

--- a/src/app/ui/overrides/adf-document-list.theme.scss
+++ b/src/app/ui/overrides/adf-document-list.theme.scss
@@ -14,6 +14,10 @@
 
   .adf-datatable-list {
     border: none;
+
+    .adf-ellipsis-cell {
+      overflow: hidden;
+    }
   }
 
   .mat-icon.adf-datatable-selected > svg {
